Fix text-overflow in tiles

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -33,7 +33,8 @@ $colors: (
 
 // Typography
 $font-stack: 'HelveticaNeue', 'Helvetica Neue', helvetica, 'arial', sans-serif;
-$rfgen-font-size-small: 14px;
+// $rfgen-font-size-small: 14px;
+$rfgen-font-size-small: 16px;
 $rfgen-font-size-large: 26px;
 $rfgen-font-size-mobile-large: 22px;
 
